--- a/.github/workflows/run_uncrustify.yml
+++ b/.github/workflows/run_uncrustify.yml
@@ -48,4 +48,9 @@ jobs:
           
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
+
+      - name: List files in the submodule
+        run: |
+          echo "Listing files in the psoc6hal submodule:"
+          ls submodules/psoc6hal/include
         
